--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,31 @@
+body {
+    display: flex;
+}
 #sketchpad {
     display: flex;
     flex-wrap: wrap;
-    
+    height: 100vh;
+    width: 100vw;
+    border-style: solid;
 }
+
+.options {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    padding: 2.5%;
+}
+
+button{
+    margin: 8px;
+}
+#size {
+    float: left;
+    width: 10rem;
+}
+
+#reset {
+    float: left;
+    width: 10rem;
+}
+
